--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+.app {
+  background: linear-gradient(45deg, rgba(43,161,173,1) 0%, rgba(0,212,255,1) 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  font-family: 'Bungee Shade';
+  color: navy;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.players-list {
+  margin-top: 2rem;
+  width:  10rem;
+  padding: 0.5rem;
+  border: 2px solid navy;
+}
+
+.new-player {
+  margin-top: 1rem;
+  width:  10rem;
+  padding: 0.5rem;
+  box-sizing: border-box;
+}
+
+.start-button {
+  width:  10rem;
+  margin-top: 5rem;
+  font-size: 1.5rem;
+  padding: 0.3rem 1.5rem;
+  border: 2px solid navy;
+  cursor: pointer;
+}
+
+.start-button:hover {
+  box-shadow: 0 0 5px navy;
 }
