Change styling of Home page
Add blank Game page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,19 +1,28 @@
-.wrapper {
+.home-wrapper {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .title {
-  margin-top: 15rem;
   font-family: 'Bungee Shade';
   color: navy;
+  margin: 5rem 0 0 0;
 }
 
 .players-list {
-  margin-top: 2rem;
-  width:  12rem;
+  border-radius: 0.5rem;
+  border: 2px solid navy;
+  padding: 1rem;
+  max-width: 12rem;
+}
+
+.players-select {
+  display: flex;
+  flex-direction: column;
+  width: 12rem;
   padding: 0.5rem;
   border: 2px solid navy;
 }
@@ -28,16 +37,16 @@
 .error-message {
   color: #CC0000;
   height: 20px;
+  text-align: center;
 }
 
 .start-button {
-  position: fixed;
-  bottom: 5rem;
   width:  12rem;
   font-size: 1.5rem;
   padding: 0.3rem 1.5rem;
   border: 2px solid navy;
   cursor: pointer;
+  margin: 0 0 2rem 0;
 }
 
 .start-button:hover {
