--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
 .app {
   background: linear-gradient(45deg, rgba(43,161,173,1) 0%, rgba(0,212,255,1) 100%);
 }
+
+.wrapper {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 0 3rem;
+  box-sizing: border-box;
+}
+
+.button {
+  width:  12rem;
+  font-size: 1.5rem;
+  padding: 0.3rem 1.5rem;
+  border: 2px solid navy;
+  cursor: pointer;
+}
+
+.button:hover {
+  box-shadow: 0 0 5px navy;
+}
