--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,6 +18,7 @@
   padding: 0.3rem 1.5rem;
   border: 2px solid navy;
   cursor: pointer;
+  margin-top: 2rem;
 }
 
 .button:hover {
