--- a/src/pages/Scoreboard/Scoreboard.css
+++ b/src/pages/Scoreboard/Scoreboard.css
@@ -4,6 +4,7 @@
 
 .scoreboard-highscores-list {
   width: 80vw;
+  max-width: 20rem;
   border-radius: 0.5rem;
   border: 2px solid navy;
 }
@@ -12,8 +13,16 @@
   font-size: 1.5rem;
 }
 
+.scoreboard-highscores {
+  margin: 0;
+}
+
 .scoreboard-highscore-item {
   line-height: 2;
+}
+
+.scoreboard-current-player-score {
+  color: #FFFFFF;
 }
 
 .scoreboard-player-score {
